--- a/pages/pk/fans/fans.wxml
+++ b/pages/pk/fans/fans.wxml
@@ -1,4 +1,4 @@
-<view class="css b-white"  style="min-height:100vh">
+<view class="css {{followers.length>0?'b-48':'b-white'}}"  style="min-height:100vh">
   <view class="css " >
     <view class="rcs " style="height:{{top}}px"></view>
     <view class="rcs " style="height:32px">
@@ -45,7 +45,7 @@
     </view>
     <view wx:else class="ccc "  style="flex:1">
         <view class="rcc">
-            <image class="h-400 w-400" mode="aspectFit" src="{{emptyImage}}" ></image>
+            <image class="h-400 w-400" mode="aspectFit" src="/images/img.png" ></image>
         </view>
         <view class="fs-30 fw-300 c-3">暂无粉丝</view>
 
@@ -57,7 +57,7 @@
 </view>
 
 <!-- //头部 -->
-<view class="css b-line customCenterBar z3 b-white" >
+<view class="css b-line customCenterBar z3 {{followers.length>0?'b-48':'b-white'}}" >
         <view class="rcs " style="height:{{top}}px"></view>
         <view class="rbc" style="height:32px">
             <view class="rcs" style="flex:1">
