--- a/pages/pk/findCard/findCard.wxml
+++ b/pages/pk/findCard/findCard.wxml
@@ -1,5 +1,5 @@
 <!--pages/pk/findCard/findCard.wxml-->
-<view class="csc {{findUser?'b-48':'b-white'}}" style="min-height:100vh">
+<view class="csc {{findUser?'b-black':'b-white'}} " style="min-height:100vh;background-position: center;background-image: url({{findUser?backUrl:''}});background-repeat: no-repeat;background-size: 100% 100%; ">
 
     <view wx:if="{{findUser}}" class="css">
 
@@ -11,7 +11,7 @@
                         
                                     <view class="rcc">
                                         <view class="rcc pr-10">
-                                            <image class="rcc w-50 h-50 br-50 " src="{{findUser.user.imgUrl}}" mode="aspectFill"></image>
+                                            <image class="rcc w-50 h-50 br-5 " src="{{findUser.user.imgUrl}}" mode="aspectFill"></image>
                                         </view>
                                     </view> 
                         
@@ -29,13 +29,13 @@
                                                     </view>
                     </button>                
                     <view class="w-70"></view>         
-                    <navigator  class="rcc " hover-class="none" url="/pages/pk/userCard/userCard?userId={{findUser.user.userId}}">
+                    <view  class="rcc" bindtap="userCard" data-userid="{{findUser.user.userId}}">
                                                     <view class="rcc">
                                                         <view class="rcc">
                                                             <image class="w-50 h-50" mode="aspectFit" src="/images/card.png"></image>
                                                         </view>
                                                     </view>
-                    </navigator>    
+                    </view>    
 
             </view>
 
@@ -43,62 +43,62 @@
             <view class="css pl-3vw pr-3vw" >
                 <view class="css pt-30 pb-30">
                     <!-- <view class="rus"> -->
-                        <view class="rus fs-30 ">{{findUser.text}}</view>
+                        <view class="rus fs-30 fw-300 line-3-center">{{findUser.text}}</view>
                     <!-- </view> -->
 
                 </view>
                 <view wx:if="{{findUser.img1&&findUser.img2&&findUser.img3}}" class="css">
-                    <swiper style="height:60vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
+                    <swiper style="height:65vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
                        
                           <swiper-item >
-                                <view class="rcc" style="height:60vw;width:84vw" >
-                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                <view class="rcc" style="height:65vw;width:84vw" >
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
                                 </view>
                           </swiper-item>
                           <swiper-item >
-                                <view class="rcc" style="height:60vw;width:84vw" >
-                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}"></image>
+                                <view class="rcc" style="height:65vw;width:84vw" >
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}"></image>
                                 </view>
                           </swiper-item>
                           <swiper-item >
-                                <view class="rcc" style="height:60vw;width:84vw" >
-                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img3}}"></image>
+                                <view class="rcc" style="height:65vw;width:84vw" >
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img3}}"></image>
                                 </view>
                           </swiper-item>
                     </swiper>
                 </view>
                 <view wx:elif="{{findUser.img1&&findUser.img2&&!findUser.img3}}" class="css">
-                    <swiper style="height:60vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
+                    <swiper style="height:65vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
                        
                           <swiper-item >
-                                <view class="rcc" style="height:60vw;width:84vw" >
-                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                <view class="rcc" style="height:65vw;width:84vw" >
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
                                 </view>
                           </swiper-item>
                           <swiper-item >
-                                <view class="rcc" style="height:60vw;width:84vw" >
-                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}"></image>
+                                <view class="rcc" style="height:65vw;width:84vw" >
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}"></image>
                                 </view>
                           </swiper-item>
                     </swiper>
                 </view>
                 <view wx:elif="{{findUser.img1&&!findUser.img2&&!findUser.img3}}" class="css">
-                    <swiper style="height:60vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
+                    <swiper style="height:65vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
                        
                           <swiper-item >
-                                <view class="rcc" style="height:60vw;width:84vw" >
-                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                <view class="rcc" style="height:65vw;width:84vw" >
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
                                 </view>
                           </swiper-item>
                     
                     </swiper>
                 </view>
                 <view wx:else class="css">
-                    <swiper style="height:60vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
+                    <swiper style="height:65vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
                        
                           <swiper-item >
-                                <view class="rcc" style="height:60vw;width:84vw" >
-                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{emptyImage}}"></image>
+                                <view class="rcc" style="height:65vw;width:84vw" >
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="/images/img.png"></image>
                                 </view>
                           </swiper-item>
                   
@@ -174,14 +174,14 @@
                 <view class="w-4vw"></view>
                 <view class="rcc h-32px w-32px br-32px " bindtap="relaunch">
              
-                    <image class="h-40 w-40" mode="aspectFit" src="/images/home.png"></image>
+                    <image class="h-40 w-40" mode="aspectFit" src="/images/home1.png"></image>
                     <!-- <view class="w-10"></view>
                     <view class="rcc fs-35 fw-400 c-4-1">捞人卡</view> -->
                 </view>
 
             </view>
             <view class="rcc">
-
+                <view class="rcc fs-35 fw-700 c-white">捞人卡</view>
             </view>
             
             <view class="rcc" style="flex:1">
@@ -190,6 +190,18 @@
         </view>
         <view class="rcs " style="height:10px"></view>
 </view>
+<view class="rcc uploadButton z3">
+
+  <view class="rcc p-20">
+    <view class="rcc fs-25 fw-300 c-white">遇见不撩</view>
+    <image class="w-35 h-35 pl-10 pr-10" mode="aspectFit" src="/images/shank.png"></image>
+    <view class="rcc fs-25 fw-300 c-white">卡点互捞</view>
+  </view>
+  
+</view>
+
+
+
 
 <view>
 
