--- a/pages/pk/userSort/userSort.wxml
+++ b/pages/pk/userSort/userSort.wxml
@@ -1,15 +1,18 @@
 <!--pages/pk/userSort/userSort.wxml-->
 <view class="css b-white"  style="min-height:100vh">
-    <view class="css" >
-      <view class="rcs " style="height:{{top}}px"></view>
-      <view class="rcs " style="height:32px">
-        <view class="rcc h-32px " bindtap="back">
-        </view>
-      </view>
-      <view class="rcs " style="height:20px"></view>
-    </view>
+
 
     <view wx:if="{{sorts&&sorts.length > 0}}" class="css p-3vw">
+        <view class="css" >
+            <view class="rcs " style="height:{{top}}px"></view>
+            <view class="rcs " style="height:32px">
+                <view class="rcc h-32px " bindtap="back">
+                </view>
+            </view>
+            <view class="rcs " style="height:20px"></view>
+        </view>
+
+
 
         <view class="css" wx:for="{{sorts}}" wx:for-index="bindex" wx:for-item="sort" wx:key="postkey">
           <view class="css " style="width:47vw">
@@ -36,7 +39,7 @@
     </view>
     <view wx:else class="ccc "  style="flex:1">
         <view class="rcc">
-            <image class="h-400 w-400" mode="aspectFit" src="{{emptyImage}}" ></image>
+            <image class="h-300 w-300" mode="aspectFit" src="{{emptyData}}" ></image>
         </view>
         <view class="fs-30 fw-300 c-3">暂无打卡信息</view>
     </view>
